<resources>
    <string name="title_information">INFORMATION</string>
    <string name="title_views">Views:</string>
    <string name="title_loads">Downloads:</string>
    <string name="title_likes">Likes:</string>
    <string name="title_comments">Comments:</string>

    <string name="content_description_main_image">Main image</string>
    <string name="content_description_arrow_back">Button back</string>

    <string name="error_load_detail">Failed to load data!</string>
    <string name="retry">RETRY</string>
    <string name="label_comment">Comment</string>
    <string name="btn_save">SAVE</string>
</resources>